ping-pong-with-log-output/1.1/manifests/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: log-output-dep
  labels:
    app: log-output
  namespace: exercises
spec:
  volumes:
    - name: shared-logs
      emptyDir: {}
    - name: shared-image
      persistentVolumeClaim:
        claimName: image-claim
    - name: config
      configMap:
        name: log-output-config-map
        items:
          - key: "information.txt"
            path: "information.txt"
  containers:
    - name: log-writer
      image: exercises/string-generator
      volumeMounts:
        - name: shared-logs
          mountPath: /shared
    - name: log-reader
      image: exercises/string-reader
      readinessProbe:
        httpGet:
          path: /ready
          port: 3000
        initialDelaySeconds: 30
        periodSeconds: 5
      ports:
        - containerPort: 3000
      volumeMounts:
        - name: shared-logs
          mountPath: /shared
        - name: shared-image
          mountPath: /ping-pong-data
        - name: config
          mountPath: "/config"
          readOnly: true
