ping-pong-with-log-output/1.1/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pingpong-route
  namespace: exercises
spec:
  parentRefs:
  - name: pingpong-gateway

  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /pings
    backendRefs:
      - name: ping-pong-svc
        port: 80

  - matches:
      - path:
          type: PathPrefix
          value: /hello
    backendRefs:
      - name: ping-pong-svc
        port: 80

  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
      - name: log-output-svc
        port: 80

  - matches:
      - path:
          type: PathPrefix
          value: /pingpong
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: ping-pong-svc
        port: 80
        weight: 1
